# openapi/index.yaml
@@ -539,8 +539,8 @@ definitions:
         $ref: '#/definitions/IsEmailEnabled'
       is_email_validated:
         $ref: '#/definitions/IsEmailValidated'
-      is_reminder_enabled:
-        $ref: '#/definitions/IsReminderEnabled'
+      reminder_status:
+        $ref: '#/definitions/ReminderStatus'
       is_test_profile:
         $ref: '#/definitions/IsTestProfile'
       last_app_version:
@@ -639,8 +639,8 @@ definitions:
         $ref: '#/definitions/IsWebhookEnabled'
       is_email_enabled:
         $ref: '#/definitions/IsEmailEnabled'
-      is_reminder_enabled:
-        $ref: '#/definitions/IsReminderEnabled'
+      reminder_status:
+        $ref: '#/definitions/ReminderStatus'
       last_app_version:
         $ref: '#/definitions/AppVersion'
       version:
@@ -758,10 +758,15 @@ definitions:
     description: >-
       True if the recipient of a message wants to forward the notifications to
       his email address.
-  IsReminderEnabled:
-    type: boolean
-    default: false
-    description: True if the user wants reminders about unread messages.
+  ReminderStatus:
+    type: string
+    x-extensible-enum:
+      - UNSET
+      - ENABLED
+      - DISABLED
+    default: UNSET
+    example: ENABLED
+    description: Api definition of reminder opt-in status
   AcceptedTosVersion:
     type: number
     minimum: 1
